--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -9,7 +9,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="{{ url_for('search') }}">Search <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="{{ url_for('booklist') }}">Catalogue</a>
-      <a class="nav-item nav-link" href="{{ url_for('account') }}">Reviews</a>
+      <a class="nav-item nav-link" href="{{ url_for('account') }}">Your Reviews</a>
     </div>
   </div>
 
