--- a/static/styles/styles.scss
+++ b/static/styles/styles.scss
@@ -34,9 +34,12 @@ body{
     font-size: 20px;
 }
 
-.card #api{
-    margin-top: 8rem;
+#api{
+    position: relative;
+    margin-top: 100px;
 }
+
+
 #full-content{
     position: relative;
     text-align: center;
@@ -61,7 +64,7 @@ body{
         // border: 2px solid black;
         
         .form-group{
-            width: 600px;
+            width: 80%;
             margin-left: auto;
             margin-right: auto;
             margin-top: 10px;
