Fixed styling for flashes

--- a/static/styles/styles.scss
+++ b/static/styles/styles.scss
@@ -28,7 +28,9 @@ body{
 
 .flashes{
     position: absolute;
-    width: 100%;
+    right: 10px;
+    left: 10px;
+    top: 10px;
 }
 .blockquote{
     font-size: 20px;
